--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>طباعة ملصق 5x3 سم</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="manifest" href="manifest.json">
+  <meta charset="UTF-8" />
+  <title>تطبيق طباعة ليبل</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="manifest" href="manifest.json" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
@@ -12,19 +12,17 @@
     }
   </script>
   <style>
-    body { font-family: Arial; text-align: center; direction: rtl; padding: 20px; margin: 0; }
-    h2 { margin-top: 40px; }
-    button { padding: 10px 20px; font-size: 16px; }
-    iframe { width: 100%; height: 300px; border: 1px solid #ccc; margin-top: 20px; }
+    body { font-family: Arial; text-align: center; direction: rtl; padding: 20px; }
+    h2 { margin-top: 30px; }
+    button { padding: 10px 20px; font-size: 16px; margin-top: 20px; }
   </style>
 </head>
 <body>
-  <h2>إنشاء ملصق 5×3 سم</h2>
-  <button onclick="generatePDF()">إنشاء الملصق</button>
-  <iframe id="pdfFrame" title="عرض الملصق"></iframe>
+  <h2>إنشاء ملصق حراري 5×3 سم</h2>
+  <button onclick="generateAndShareLabel()">إنشاء ومشاركة الملصق</button>
 
   <script>
-    async function generatePDF() {
+    async function generateAndShareLabel() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
         orientation: "landscape",
@@ -39,9 +37,22 @@
       doc.text("السعر: 25 ₪", 0.5, 2.2);
       doc.text("الكود: 123456", 0.5, 2.8);
 
-      const blob = doc.output("blob");
-      const url = URL.createObjectURL(blob);
-      document.getElementById('pdfFrame').src = url;
+      const pdfBlob = doc.output("blob");
+      const file = new File([pdfBlob], "label.pdf", { type: "application/pdf" });
+
+      if (navigator.canShare && navigator.canShare({ files: [file] })) {
+        try {
+          await navigator.share({
+            files: [file],
+            title: "مشاركة الملصق",
+            text: "تم إنشاء ملصق للمنتج"
+          });
+        } catch (err) {
+          alert("تم إلغاء المشاركة أو لم يتم دعمها");
+        }
+      } else {
+        alert("جهازك لا يدعم ميزة المشاركة التلقائية للملفات");
+      }
     }
   </script>
 </body>
