--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
 
     <script src="config.js"></script>
     <script src="script.js"></script>
+    <script src="Server.md"></script>
 </body>
 </html>
