--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>اضغط على الزر لطباعة الفاتورة</p>
 
   <!-- استبدل بالرابط الصحيح لموقعك -->
-  <a class="btn" href="bprint://https://mohammad-shehadeh.github.io/otp//response.php?id=123">🖨️ طباعة الفاتورة</a>
+  <a class="btn" href="bprint://https://abc8161.wuaze.com/response.php">🖨️ طباعة الفاتورة</a>
 
 </body>
 </html>
